--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 /* Header section */
 
+.header {
+    box-shadow: 0 4px 0 #f34949;
+}
+
 .nav {
     max-width: 1100px;
     margin: 0 auto;
@@ -57,7 +61,6 @@
     height: 100%;
     opacity: 0.8;
     z-index: 2;
-    box-shadow: 0 4px 0 #f34949;
 }
 
 .hero-section__header {
@@ -160,5 +163,104 @@
     }
     .hero-section__desc {
         top: 425px
+    }
+}
+
+/* Section 'Menu' */
+
+.restaurant-menu {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-bottom: 100px;
+}
+
+.restaurant-menu__header {
+    background-color: #f34949;
+    height: 75px;
+    width: 155px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 75px;
+    font-family: 'Aleo', serif;
+    font-weight: bold;
+    color: #fff;
+    position: relative;
+    margin-bottom: 81px;
+}
+
+.restaurant-menu__header::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 77.5px 11px 77.5px;
+    border-color: transparent transparent #ffffff transparent;
+}
+
+.restaurant-menu__lists {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 60px;
+    padding: 0 30px;
+}
+
+.restaurant-menu-list__item {
+    display: flex;
+    margin-bottom: 60px;
+    justify-content: space-between;
+}
+
+.restaurant-menu-list__dish {
+    margin: 0;
+    font-family: 'Aleo', serif;
+    font-size: 16px;
+    color: #555;
+}
+
+.restaurant-menu-list__dish-desc {
+    font-weight: 300;
+    font-style: italic;
+    font-size: 12px;
+    color: #b7b7b7;
+}
+
+.restaurant-menu-list__line {
+    width: 39%;
+    height: 1px;
+    background-color: #e3e1e1;
+    margin: 10px 10% 0 10%;
+}
+
+.restaurant-menu__load-more-btn {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 133px;
+    height: 34px;
+    background: transparent;
+    border: 1px solid #d7d5d5;
+    cursor: pointer;
+    font-family: 'Aleo', serif;
+    color: #b7b7b7;
+    font-size: 14px;
+}
+
+.restaurant-menu__load-more-btn-arrow {
+    border: solid #b7b7b7;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    margin-top: -4px;
+}
+
+@media only screen and (max-width: 768px) {
+    .restaurant-menu__lists {
+        grid-template-columns: 1fr;
     }
 }
